--- a/Photon-Tinker/Info.plist
+++ b/Photon-Tinker/Info.plist
@@ -30,7 +30,7 @@
 		<string>Gotham-Medium.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>Main</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
