--- a/Photon-Tinker/Info.plist
+++ b/Photon-Tinker/Info.plist
@@ -19,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>2</string>
+	<string>3</string>
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
@@ -45,6 +45,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>No usage</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Particle app uses the camera to conveniently scan ICCID numbers from your SIM cards to ease the Electron setup process</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Gotham-Book.otf</string>
@@ -73,6 +77,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
 </dict>
