update git ignore to have keys and google service plist in the root folder

--- a/.gitignore
+++ b/.gitignore
@@ -37,8 +37,8 @@ timeline.xctimeline
 playground.xcworkspace
 
 #Sensitive keys
-Photon-Tinker/Keys.swift
-Photon-Tinker/GoogleService-Info.plist
+Keys.swift
+GoogleService-Info.plist
 
 # CocoaPods
 Pods/
