Enable simple app universal deep link to support SMS from setup.particle.io

--- a/Particle.entitlements
+++ b/Particle.entitlements
@@ -2,6 +2,11 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>com.apple.developer.associated-domains</key>
+	<array>
+		<string>applinks:particle-iot.app.link</string>
+		<string>applinks:particle-iot-alternate.app.link</string>
+	</array>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)io.particle.Particle</string>
