--- a/Particle.entitlements
+++ b/Particle.entitlements
@@ -7,6 +7,8 @@
 		<string>applinks:particle-iot.app.link</string>
 		<string>applinks:particle-iot-alternate.app.link</string>
 	</array>
+	<key>com.apple.developer.networking.wifi-info</key>
+	<true/>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)io.particle.Particle</string>
