add launch screen storyboard

--- a/Photon-Tinker/Info.plist
+++ b/Photon-Tinker/Info.plist
@@ -63,7 +63,7 @@
 		<string>Gotham-Medium.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
-	<string>Main</string>
+	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
