--- a/mbedTLSWrapper/mbedTLSWrapper.xcodeproj/xcshareddata/xcschemes/Particle.xcscheme
+++ b/mbedTLSWrapper/mbedTLSWrapper.xcodeproj/xcshareddata/xcschemes/Particle.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "9365493121232D3300E12BC0"
-               BuildableName = "mbedTLSWrapper.framework"
-               BlueprintName = "mbedTLSWrapper"
-               ReferencedContainer = "container:mbedTLSWrapper.xcodeproj">
+               BlueprintIdentifier = "50B125421AE06CF4003C29DC"
+               BuildableName = "Particle.app"
+               BlueprintName = "Particle"
+               ReferencedContainer = "container:../Particle.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -61,6 +61,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "50B125421AE06CF4003C29DC"
+            BuildableName = "Particle.app"
+            BlueprintName = "Particle"
+            ReferencedContainer = "container:../Particle.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
@@ -72,6 +81,10 @@
       </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
+      <LocationScenarioReference
+         identifier = "com.apple.dt.IDEFoundation.CurrentLocationScenarioIdentifier"
+         referenceType = "1">
+      </LocationScenarioReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
